--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -34,88 +34,100 @@
             <button><i class="far fa-heart"></i></button>
           </div>
           <article>
-            <h2>ENTRÉES</h2>
-            <div class="lin--tertiary"></div>
-            <div class="menu">
-              <div class="menu__title§">
-                <h3>Fricassée d'escargot</h3>
-                <p class="menu__title§__§">Au piment d'espelette</p>
-              </div>
-              <div class="menu__price"><em>25€</em></div>
+            <div class="title__tertiary">
+              <h2>ENTRÉES</h2>
+              <div class="lin--tertiary"></div>
             </div>
-            <div class="menu">
-              <div class="menu__title§">
-                <h3>Foie gras de canard mi-cuit</h3>
-                <p class="menu__title§__§">Et ses copeaux de truffe noire</p>
+            <div class="together__menu">
+              <div class="menu">
+                <div class="menu__title§">
+                  <h3>Fricassée d'escargot</h3>
+                  <p class="menu__title§__§">Au piment d'espelette</p>
+                </div>
+                <div class="menu__price"><em>25€</em></div>
               </div>
-              <div class="menu__price"><em>35€</em></div>
-            </div>
-            <div class="menu">
-              <div class="menu__title§">
-                <h3>Oeuf au plat</h3>
-                <p class="menu__title§__§">
-                  Assaisonné à la truffe sur lit de...
-                </p>
+              <div class="menu">
+                <div class="menu__title§">
+                  <h3>Foie gras de canard mi-cuit</h3>
+                  <p class="menu__title§__§">Et ses copeaux de truffe noire</p>
+                </div>
+                <div class="menu__price"><em>35€</em></div>
               </div>
-              <div class="menu__price"><em>20€</em></div>
-            </div>
-          </article>
-          <article>
-            <h2>PLATS</h2>
-            <div class="lin--tertiary"></div>
-            <div class="menu">
-              <div class="menu__title§">
-                <h3>Filet de boeuf aux herbes</h3>
-                <p class="menu__title§__§">
-                  Accompagnées de sa ribambelle de légu...
-                </p>
+              <div class="menu">
+                <div class="menu__title§">
+                  <h3>Oeuf au plat</h3>
+                  <p class="menu__title§__§">
+                    Assaisonné à la truffe sur lit de...
+                  </p>
+                </div>
+                <div class="menu__price"><em>20€</em></div>
               </div>
-              <div class="menu__price"><em>40€</em></div>
-            </div>
-            <div class="menu">
-              <div class="menu__title§">
-                <h3>Parmentier de queue de boeuf</h3>
-                <p class="menu__title§__§">
-                  À la truffe noire sur sa purée de panais
-                </p>
-              </div>
-              <div class="menu__price"><em>35€</em></div>
-            </div>
-            <div class="menu">
-              <div class="menu__title§">
-                <h3>Filet de Turbot</h3>
-                <p class="menu__title§__§">Aux agrumes</p>
-              </div>
-              <div class="menu__price"><em>44€</em></div>
             </div>
           </article>
           <article>
-            <h2>DESSERTS</h2>
-            <div class="lin--tertiary"></div>
-            <div class="menu">
-              <div class="menu__title§">
-                <h3>Paris-Brest</h3>
-                <p class="menu__title§__§">Revisité</p>
-              </div>
-              <div class="menu__price"><em>18€</em></div>
+            <div class="title__tertiary">
+              <h2>PLATS</h2>
+              <div class="lin--tertiary"></div>
             </div>
-            <div class="menu">
-              <div class="menu__title§">
-                <h3>Macaron au chocolat d'exception</h3>
-                <p class="menu__title§__§">
-                  Et glace à la vanille de Madagascar
-                </p>
+            <div class="together__menu">
+              <div class="menu">
+                <div class="menu__title§">
+                  <h3>Filet de boeuf aux herbes</h3>
+                  <p class="menu__title§__§">
+                    Accompagnées de sa ribambelle de légu...
+                  </p>
+                </div>
+                <div class="menu__price"><em>40€</em></div>
               </div>
-              <div class="menu__price"><em>22€</em></div>
+              <div class="menu">
+                <div class="menu__title§">
+                  <h3>Parmentier de queue de boeuf</h3>
+                  <p class="menu__title§__§">
+                    À la truffe noire sur sa purée de panais
+                  </p>
+                </div>
+                <div class="menu__price"><em>35€</em></div>
+              </div>
+              <div class="menu">
+                <div class="menu__title§">
+                  <h3>Filet de Turbot</h3>
+                  <p class="menu__title§__§">Aux agrumes</p>
+                </div>
+                <div class="menu__price"><em>44€</em></div>
+              </div>
             </div>
-            <div class="menu">
-              <div class="menu__title§">
-                <h3>Mousse au chocolat</h3>
-                <p class="menu__title§__§">
-                  Au piment d'espelette et à la truffe noire
-                </p>
+          </article>
+          <article>
+            <div class="title__tertiary">
+              <h2>DESSERTS</h2>
+              <div class="lin--tertiary"></div>
+            </div>
+            <div class="together__menu">
+              <div class="menu">
+                <div class="menu__title§">
+                  <h3>Paris-Brest</h3>
+                  <p class="menu__title§__§">Revisité</p>
+                </div>
+                <div class="menu__price"><em>18€</em></div>
               </div>
-              <div class="menu__price"><em>23€</em></div>
+              <div class="menu">
+                <div class="menu__title§">
+                  <h3>Macaron au chocolat d'exception</h3>
+                  <p class="menu__title§__§">
+                    Et glace à la vanille de Madagascar
+                  </p>
+                </div>
+                <div class="menu__price"><em>22€</em></div>
+              </div>
+              <div class="menu">
+                <div class="menu__title§">
+                  <h3>Mousse au chocolat</h3>
+                  <p class="menu__title§__§">
+                    Au piment d'espelette et à la truffe noire
+                  </p>
+                </div>
+                <div class="menu__price"><em>23€</em></div>
+              </div>
             </div>
           </article>
           <div class="btn"><button>Commander</button></div>
@@ -124,14 +136,16 @@
       <!--contact-->
       <footer>
         <h4>Ohmyfood</h4>
-        <p class="footer--bold">
-          <i class="fas fa-utensils"></i>Proposer un restaurant
-        </p>
-        <p class="footer--bold">
-          <i class="fas fa-hands-helping"></i>Devenir partenaire
-        </p>
-        <p>Mentions légales</p>
-        <p><a href="mailto:votrenom@bidule.com">Contact</a></p>
+        <div id="contact">
+          <p class="contact--bold">
+            <i class="fas fa-utensils"></i>Proposer un restaurant
+          </p>
+          <p class="contact--bold">
+            <i class="fas fa-hands-helping"></i>Devenir partenaire
+          </p>
+          <p>Mentions légales</p>
+          <p><a href="mailto:votrenom@bidule.com">Contact</a></p>
+        </div>
       </footer>
     </div>
   </body>
